modify SecurityConfig